<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/addHike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/addHiketxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Add new Hike"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/hikeName"
                    android:textSize="20dp"></TextView>

                <EditText
                    android:id="@+id/hikeName_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_background"
                    android:hint="Nghe An"
                    android:padding="7dp"
                    android:paddingLeft="15dp">

                </EditText>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/hikeLocation"
                    android:textSize="20dp"></TextView>

                <EditText
                    android:id="@+id/hikeLocation_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_background"
                    android:hint="Quang Binh"
                    android:padding="7dp"
                    android:paddingLeft="15dp">

                </EditText>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/hikeDate"
                    android:textSize="20dp"></TextView>

                <EditText
                    android:id="@+id/hikeDate_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_background"
                    android:hint="DD/MM/YY"
                    android:padding="7dp"
                    android:paddingLeft="15dp">

                </EditText>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hikePark"
                        android:textSize="20dp"></TextView>

                    <RadioButton
                        android:id="@+id/bt_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="yes"
                        android:textSize="20dp"

                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/bt_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="no"
                        android:textSize="20dp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hikeLength"
                        android:textSize="20dp"></TextView>

                    <EditText
                        android:id="@+id/hikeLength_ip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/edit_background"
                        android:hint="100"
                        android:padding="7dp"
                        android:paddingLeft="15dp"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginVertical="5dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/hikeDifficult"
                            android:textSize="20dp">

                        </TextView>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:hint="Select">

                            <AutoCompleteTextView
                                android:id="@+id/Dif_ip"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="none"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/hikeDescription"
                    android:textSize="20dp"></TextView>

                <EditText
                    android:id="@+id/Desc_ip"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_background"
                    android:hint="Description about the hike"
                    android:inputType="textMultiLine"
                    android:padding="7dp"
                    android:paddingLeft="15dp"></EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Add"
                        android:textAlignment="center"
                        android:textSize="20dp">

                    </Button>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>